--- a/templates/purchase/bought_history.html
+++ b/templates/purchase/bought_history.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container my-5">
     <div class="text-center mb-4">
-        <h2 class="fw-bold">🛒 Your Purchased Products</h2>
+        <h2 class="fw-bold"><i class="bi bi-bag-check-fill"></i> Your Purchased Products</h2>
     </div>
 
     {% if bought_products %}
