--- a/templates/product/product_list.html
+++ b/templates/product/product_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="text-center w-100">Our Products</h2>
+        <h2 class="text-center w-100">Product List</h2>
         {% if user.is_authenticated and user.is_superuser %}
             <a href="{% url 'product_create' %}" class="btn btn-primary ms-3 ">
                 <i class="bi bi-plus-circle"></i> Add Product
